--- a/public/index.html
+++ b/public/index.html
@@ -10,7 +10,7 @@
     <meta name="theme-color" content="#000000" />
     
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
-  
+    <script src="https://cdn.freecodecamp.org/testable-projects-fcc/v1/bundle.js" />
     <title>Pomodoro</title>
   </head>
   <body>
